tw-backend/deploy/k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: world
  namespace: mud-world
  labels:
    app: world
spec:
  ports:
  - port: 8080
    name: http
  clusterIP: None # Headless service for Stable Network IDs
  selector:
    app: world
---
apiVersion: v1
kind: Service
metadata:
  name: world-public
  namespace: mud-world
  labels:
    app: world
spec:
  type: NodePort # Or LoadBalancer in cloud
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: world
