tw-backend/deploy/k8s/13-debug-ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mud-world-ingress-debug-http
  namespace: mud-world
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  rules:
  - http:
      paths:
      - path: /debug-test
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 8080
